Fix header wrapper position so shadow is visible

--- a/app/assets/stylesheets/structure.sass
+++ b/app/assets/stylesheets/structure.sass
@@ -6,6 +6,8 @@
 
 
 .header_wrapper
+  position: relative
+  z-index: 8
   box-shadow: 0 -4px 16px $gray_light
 
 .footer_wrapper
